<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/extra_normal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_text_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_text_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_head"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_normal"
            android:text="@string/radio_group_title"
            android:textSize="@dimen/normal_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_text_layout" />

        <RadioGroup
            android:id="@+id/rg_format_options"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal"
            android:checkedButton="@id/rb_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_head">

            <RadioButton
                android:id="@+id/rb_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text" />

            <RadioButton
                android:id="@+id/rb_lowercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lowercase" />

            <RadioButton
                android:id="@+id/rb_uppercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uppercase" />

        </RadioGroup>

        <Button
            android:id="@+id/bt_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_display_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_format_options" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_display">

            <TextView
                android:id="@+id/tv_display"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greeting"
                android:textSize="@dimen/normal_text" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>